--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-service": "~4.5.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-qriously": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
